lifeguard-derive/tests/ui/compile_error_partial_model_empty_entity.stderr
error: Entity path cannot be empty. Use #[lifeguard(entity = "path::to::Entity")] with a valid path.
 --> tests/ui/compile_error_partial_model_empty_entity.rs:6:1
  |
6 | #[derive(DerivePartialModel)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
